# pomodoro_tracker

./: .pre-commit-config.yaml  README.md  package.json  tsconfig.json
backend/: database.db  poetry.toml  pyproject.toml
backend/src/: dependency.py  main.py  models.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: TaskList.tsx  Timer.tsx
frontend/app/components/services/task/: getAllCompleteTasksService.ts  getAllIncompleteTasksService.ts  taskCreateService.ts  taskDeleteService.ts
frontend/app/components/services/timer/: saveBeforeSwitchService.ts
frontend/app/components/task/: TaskItem.tsx
my-app/: package-lock.json
my-app/frontend/: package.json
my-app/frontend/app/: globals.css  page.tsx
my-app/frontend/app/components/: Timer.tsx
